--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,8 +4,18 @@ server:
 spring:
   application:
     name: race-photos-api
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/racephotos}
+    username: ${DB_USERNAME:racephotos}
+    password: ${DB_PASSWORD:secret}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 logging:
   level:
     root: INFO
-
