s3 upload service with progress functionality, dev and prod configs, region change

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 aws:
-  region: ${AWS_REGION:us-east-1}
+  region: ${AWS_REGION:eu-central-1}
   s3:
     bucket: ${AWS_S3_BUCKET:race-photos-test-bucket}
     endpoint: ${AWS_S3_ENDPOINT:}
