--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,6 +34,12 @@
               "outputHashing": "all"
             },
             "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ],
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
@@ -87,4 +93,3 @@
     "analytics": false
   }
 }
-
