Service to index faces from collection of photos, rekognition collection, dynamodb repo for storing references

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -30,7 +30,11 @@ aws:
     presign:
       expiration-seconds: ${AWS_S3_PRESIGN_EXPIRATION_SECONDS:7200}
   rekognition:
+    collection-id: ${AWS_REKOGNITION_COLLECTION_ID:race-photos-face-collection}
     endpoint: ${AWS_REKOGNITION_ENDPOINT:}
+  dynamodb:
+    table: ${AWS_DYNAMODB_FACE_TABLE:race-photos-face-metadata}
+    endpoint: ${AWS_DYNAMODB_ENDPOINT:}
 
 logging:
   level:
