--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -92,6 +92,10 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>rekognition</artifactId>
     </dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>dynamodb</artifactId>
+    </dependency>
 
     <!-- Use Log4j2 for logging -->
     <dependency>
