--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -30,7 +30,7 @@ aws:
     presign:
       expiration-seconds: ${AWS_S3_PRESIGN_EXPIRATION_SECONDS:7200}
   rekognition:
-    collection-id: ${AWS_REKOGNITION_COLLECTION_ID:race-photos-face-collection}
+    collection-prefix: ${AWS_REKOGNITION_COLLECTION_PREFIX:race-photos-event}
     endpoint: ${AWS_REKOGNITION_ENDPOINT:}
     search:
       max-faces: ${AWS_REKOGNITION_SEARCH_MAX_FACES:50}
