--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,6 +21,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@aws-amplify/ui-angular/theme.css",
               "src/styles.css"
             ],
             "scripts": []
