Event Gallery per Event for user to display matched images based on selfie. Selfie upload functionality if no selfie is present.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -29,6 +29,9 @@ spring:
   mvc:
     problemdetails:
       enabled: true
+  servlet:
+    multipart:
+      max-file-size: 5MB
   cloud:
     aws:
       region:
