--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@aws-amplify/core": "^6.14.0",
     "@aws-amplify/ui-angular": "^5.1.6",
     "aws-amplify": "^6.15.8",
+    "fflate": "^0.8.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.5"
