--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "^18.2.0",
     "@aws-amplify/core": "^6.14.0",
     "@aws-amplify/ui-angular": "^5.1.6",
+    "ag-grid-angular": "^34.3.1",
+    "ag-grid-community": "^34.3.1",
     "aws-amplify": "^6.15.8",
     "fflate": "^0.8.1",
     "rxjs": "^7.8.1",
